Separate out ships that carry float planes from those that do not. Capital Ships carry float planes potentially. All others do not.